--- a/dashboard.html
+++ b/dashboard.html
@@ -3,29 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard | Student Payment Portal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>Uddokta | Student Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
 
     body {
-      background: linear-gradient(135deg, #e3f2fd, #90caf9);
+      background: #f4f7fb;
       min-height: 100vh;
       padding: 20px;
       color: #2c3e50;
-      transition: all 0.3s ease;
     }
 
-    .dashboard-container {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
+    .dashboard-container { max-width: 1200px; margin: 0 auto; }
 
     /* Header */
     .dashboard-header {
@@ -33,7 +25,7 @@
       border-radius: 20px;
       padding: 25px;
       margin-bottom: 25px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -43,33 +35,24 @@
 
     .dashboard-header:hover {
       transform: translateY(-3px);
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
     }
 
-    .user-info h1 {
-      font-size: 1.6rem;
-      color: #0d47a1;
-    }
-
-    .user-info p {
-      color: #546e7a;
-    }
+    .user-info h1 { font-size: 1.8rem; color: #3f51b5; }
+    .user-info p { color: #607d8b; }
 
     .logout-btn {
-      background: #ef5350;
+      background: #e53935;
       color: white;
       border: none;
       padding: 10px 25px;
       border-radius: 10px;
       font-weight: 600;
       cursor: pointer;
-      transition: all 0.3s;
+      transition: 0.3s;
     }
 
-    .logout-btn:hover {
-      background: #c62828;
-      transform: scale(1.05);
-    }
+    .logout-btn:hover { background: #b71c1c; }
 
     /* Stats Section */
     .stats-grid {
@@ -81,131 +64,132 @@
 
     .stat-card {
       background: white;
-      border-radius: 20px;
-      padding: 20px;
+      border-radius: 15px;
+      padding: 25px;
       text-align: center;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      transition: 0.3s;
     }
 
     .stat-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
     }
 
-    .stat-card h3 {
-      font-size: 1rem;
-      margin-bottom: 10px;
-    }
+    .stat-icon { font-size: 1.8rem; margin-bottom: 8px; }
+    .stat-number { font-size: 2rem; font-weight: 700; }
+    .stat-label { color: #555; }
 
-    .stat-card .number {
-      font-size: 2rem;
-      font-weight: 700;
-    }
+    .blue-card { border-top: 5px solid #3f51b5; }
+    .green-card { border-top: 5px solid #4caf50; }
+    .orange-card { border-top: 5px solid #ff9800; }
+    .purple-card { border-top: 5px solid #9c27b0; }
 
-    .blue-card { border-left: 6px solid #42a5f5; }
-    .green-card { border-left: 6px solid #66bb6a; }
-    .orange-card { border-left: 6px solid #ffa726; }
-    .purple-card { border-left: 6px solid #ab47bc; }
-
-    /* Sections */
+    /* Section */
     .section {
       background: white;
-      border-radius: 20px;
+      border-radius: 15px;
       padding: 25px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
       margin-bottom: 30px;
-      transition: all 0.3s ease;
+      transition: all 0.3s;
     }
 
-    .section:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
-    }
+    .section:hover { transform: translateY(-3px); }
 
     .section-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
     }
 
     .section-header h3 {
+      font-size: 1.3rem;
+      color: #3f51b5;
       display: flex;
       align-items: center;
       gap: 10px;
-      font-size: 1.2rem;
-      color: #0d47a1;
     }
 
     .refresh-btn {
-      background: #43a047;
+      background: #4caf50;
       color: white;
       border: none;
       padding: 8px 15px;
       border-radius: 8px;
       cursor: pointer;
-      transition: all 0.3s;
+      transition: 0.3s;
     }
 
-    .refresh-btn:hover {
-      background: #2e7d32;
-      transform: scale(1.05);
+    .refresh-btn:hover { background: #388e3c; }
+
+    /* Form */
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 15px;
     }
 
-    /* Payment Table */
-    .table-responsive {
-      overflow-x: auto;
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: 500;
+      color: #444;
     }
 
-    table {
+    .form-group input, .form-group select {
       width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
+      padding: 12px;
+      border: 2px solid #e0e0e0;
+      border-radius: 8px;
+      font-size: 1rem;
+      transition: 0.3s;
     }
 
-    th, td {
-      padding: 12px 15px;
-      border-bottom: 1px solid #e0e0e0;
-      text-align: left;
-      font-size: 0.9rem;
+    .form-group input:focus, .form-group select:focus {
+      border-color: #3f51b5;
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(63, 81, 181, 0.1);
     }
 
-    th {
-      background: #90caf9;
-      color: #0d47a1;
-      position: sticky;
-      top: 0;
-    }
-
-    tr:hover {
-      background: #f1f8e9;
-    }
-
-    .status-badge {
-      padding: 5px 10px;
-      border-radius: 20px;
+    .submit-btn {
+      background: linear-gradient(135deg, #3f51b5, #9c27b0);
+      color: white;
+      border: none;
+      padding: 14px;
+      border-radius: 10px;
+      cursor: pointer;
       font-weight: 600;
-      font-size: 0.8rem;
+      transition: 0.3s;
+      grid-column: 1 / -1;
     }
 
+    .submit-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(156, 39, 176, 0.3);
+    }
+
+    .error-text { color: #e53935; font-size: 0.9rem; margin-top: 4px; }
+
+    /* Table */
+    .table-responsive { overflow-x: auto; }
+    table { width: 100%; border-collapse: collapse; }
+    th, td { padding: 12px; border-bottom: 1px solid #eee; text-align: left; }
+    th { background: #3f51b5; color: white; }
+    tr:hover { background: #f1f8ff; }
+    .status-badge { padding: 5px 10px; border-radius: 15px; font-weight: 600; }
     .paid { background: #c8e6c9; color: #2e7d32; }
     .pending { background: #ffe0b2; color: #ef6c00; }
 
     @media (max-width: 768px) {
-      .dashboard-header {
-        flex-direction: column;
-        text-align: center;
-        gap: 10px;
-      }
-      .section-header {
-        flex-direction: column;
-        gap: 10px;
-        align-items: flex-start;
-      }
+      .dashboard-header { flex-direction: column; text-align: center; }
+      .form-grid { grid-template-columns: 1fr; }
     }
   </style>
 </head>
+
 <body>
   <div class="dashboard-container">
     <div class="dashboard-header">
@@ -213,122 +197,182 @@
         <h1>Welcome, <span id="userName">User</span> 👋</h1>
         <p>Member ID: <strong id="userMemberId">Loading...</strong></p>
       </div>
-      <button class="logout-btn" onclick="logout()">
-        <i class="fas fa-sign-out-alt"></i> Logout
-      </button>
+      <button class="logout-btn" onclick="logout()">Logout</button>
     </div>
 
     <!-- Stats Section -->
     <div class="stats-grid">
       <div class="stat-card blue-card">
-        <h3>Total Payments</h3>
-        <div class="number" id="totalPayments">0</div>
+        <div class="stat-icon"><i class="fas fa-list"></i></div>
+        <div class="stat-number" id="totalPayments">0</div>
+        <div class="stat-label">Total Payments</div>
       </div>
       <div class="stat-card green-card">
-        <h3>Paid Payments</h3>
-        <div class="number" id="paidPayments">0</div>
+        <div class="stat-icon"><i class="fas fa-check-circle"></i></div>
+        <div class="stat-number" id="paidPayments">0</div>
+        <div class="stat-label">Paid Payments</div>
       </div>
       <div class="stat-card orange-card">
-        <h3>Pending Payments</h3>
-        <div class="number" id="pendingPayments">0</div>
+        <div class="stat-icon"><i class="fas fa-hourglass-half"></i></div>
+        <div class="stat-number" id="pendingPayments">0</div>
+        <div class="stat-label">Pending Payments</div>
       </div>
       <div class="stat-card purple-card">
-        <h3>Total Paid Amount (Tk)</h3>
-        <div class="number" id="totalAmount">0</div>
+        <div class="stat-icon"><i class="fas fa-wallet"></i></div>
+        <div class="stat-number" id="totalAmount">0</div>
+        <div class="stat-label">Total Paid Amount (Tk)</div>
       </div>
     </div>
 
-    <!-- Payment History Section -->
+    <!-- Submit New Payment -->
+    <div class="section">
+      <div class="section-header">
+        <h3><i class="fas fa-plus-circle"></i> Submit New Payment</h3>
+      </div>
+      <form id="paymentForm" class="form-grid">
+        <div class="form-group">
+          <label>Month & Year *</label>
+          <input type="month" name="Month" required>
+        </div>
+        <div class="form-group">
+          <label>Payment Date *</label>
+          <input type="date" name="PaymentDate" required>
+        </div>
+        <div class="form-group">
+          <label>Amount *</label>
+          <input type="number" name="Amount" placeholder="Enter Amount" required>
+        </div>
+        <div class="form-group">
+          <label>Payment Method *</label>
+          <select name="Method" required>
+            <option value="">Select Method</option>
+            <option>Bkash</option>
+            <option>Nagad</option>
+            <option>Bank</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Phone Number *</label>
+          <input type="text" name="Phone" placeholder="Enter Phone Number" required>
+        </div>
+        <div class="form-group">
+          <label>Transaction ID *</label>
+          <input type="text" name="TrxID" id="trxInput" placeholder="Enter TrxID" required>
+          <div class="error-text" id="trxError"></div>
+        </div>
+        <button type="submit" class="submit-btn">Submit Payment</button>
+      </form>
+    </div>
+
+    <!-- Payment History -->
     <div class="section">
       <div class="section-header">
         <h3><i class="fas fa-history"></i> Payment History</h3>
-        <button class="refresh-btn" onclick="loadUserPayments()"><i class="fas fa-sync-alt"></i> Refresh</button>
+        <button class="refresh-btn" onclick="loadPayments()"><i class="fas fa-sync-alt"></i> Refresh</button>
       </div>
-      <div id="paymentStatus">
-        <p><i class="fas fa-spinner fa-spin"></i> Loading your payment history...</p>
+      <div class="table-responsive">
+        <table id="paymentTable">
+          <thead>
+            <tr>
+              <th>Month</th>
+              <th>Amount</th>
+              <th>Status</th>
+              <th>TrxID</th>
+              <th>Payment Date</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
       </div>
     </div>
   </div>
 
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxZqHw4DYfsEzgfeuxlBTCeJsuhHqFUiq9yTnQmtua09uqXlHtrgt-_HJi2z5QNfW63/exec";
-    let currentUser = null;
+    let currentUser = JSON.parse(localStorage.getItem("currentUser") || "{}");
+    let existingTrxIDs = [];
 
-    window.addEventListener("load", () => {
-      const userData = localStorage.getItem("currentUser");
-      if (!userData) {
-        window.location.href = "index.html";
-        return;
-      }
-      currentUser = JSON.parse(userData);
+    window.onload = () => {
+      if (!currentUser.memberId) location.href = "index.html";
       document.getElementById("userName").textContent = currentUser.fullName;
       document.getElementById("userMemberId").textContent = currentUser.memberId;
-      loadUserPayments();
-    });
+      loadPayments();
+    };
 
-    async function loadUserPayments() {
-      const container = document.getElementById("paymentStatus");
-      container.innerHTML = `<p><i class="fas fa-spinner fa-spin"></i> Refreshing payment data...</p>`;
-      try {
-        const response = await fetch(SCRIPT_URL, {
-          method: "POST",
-          body: new URLSearchParams({
-            action: "get_payments",
-            memberId: currentUser.memberId,
-          }),
-        });
-        const result = await response.json();
-        if (result.result === "success") {
-          displayPayments(result.payments);
-          updateStats(result.payments);
-        } else {
-          container.innerHTML = "<p>Error loading data.</p>";
-        }
-      } catch (err) {
-        container.innerHTML = "<p>Network error. Try again.</p>";
-      }
-    }
+    async function loadPayments() {
+      const tbody = document.querySelector("#paymentTable tbody");
+      tbody.innerHTML = `<tr><td colspan="5">Loading...</td></tr>`;
 
-    function displayPayments(payments) {
-      const container = document.getElementById("paymentStatus");
-      if (!payments.length) {
-        container.innerHTML = `<p>No payments found.</p>`;
-        return;
-      }
-      let html = `<div class="table-responsive"><table><thead><tr>
-        <th>Month</th><th>Amount</th><th>Status</th><th>TrxID</th><th>Payment Date</th>
-      </tr></thead><tbody>`;
-      payments.sort((a, b) => new Date(b.PaymentDate) - new Date(a.PaymentDate));
-      payments.forEach(p => {
-        html += `<tr>
-          <td>${p.Month}</td>
-          <td>${p.Amount} Tk</td>
-          <td><span class="status-badge ${p.Status.toLowerCase()}">${p.Status}</span></td>
-          <td>${p.TrxID}</td>
-          <td>${new Date(p.PaymentDate).toLocaleDateString()}</td>
-        </tr>`;
+      const res = await fetch(SCRIPT_URL, {
+        method: "POST",
+        body: new URLSearchParams({ action: "get_payments", memberId: currentUser.memberId })
       });
-      html += "</tbody></table></div>";
-      container.innerHTML = html;
+      const result = await res.json();
+
+      if (result.result === "success") {
+        const payments = result.payments || [];
+        existingTrxIDs = payments.map(p => p.trxid?.toLowerCase());
+        payments.sort((a, b) => new Date(b.date) - new Date(a.date));
+        tbody.innerHTML = payments.map(p => `
+          <tr>
+            <td>${p.month}</td>
+            <td>${p.amount} Tk</td>
+            <td><span class="status-badge ${p.status.toLowerCase()}">${p.status}</span></td>
+            <td>${p.trxid}</td>
+            <td>${new Date(p.date).toLocaleDateString()}</td>
+          </tr>
+        `).join("");
+        updateStats(payments);
+      }
     }
 
     function updateStats(payments) {
       const total = payments.length;
-      const paid = payments.filter(p => p.Status.toLowerCase() === "paid").length;
-      const pending = payments.filter(p => p.Status.toLowerCase() === "pending").length;
-      const totalAmount = payments.reduce((sum, p) => sum + (parseFloat(p.Amount) || 0), 0);
-
+      const paid = payments.filter(p => p.status === "Paid").length;
+      const pending = payments.filter(p => p.status === "Pending").length;
+      const totalAmount = payments.reduce((sum, p) => sum + parseFloat(p.amount || 0), 0);
       document.getElementById("totalPayments").textContent = total;
       document.getElementById("paidPayments").textContent = paid;
       document.getElementById("pendingPayments").textContent = pending;
-      document.getElementById("totalAmount").textContent = totalAmount.toLocaleString();
+      document.getElementById("totalAmount").textContent = totalAmount + " Tk";
     }
+
+    document.getElementById("paymentForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const formData = new FormData(form);
+      const trxInput = document.getElementById("trxInput");
+      const trxError = document.getElementById("trxError");
+      const trxValue = formData.get("TrxID").trim().toLowerCase();
+
+      if (existingTrxIDs.includes(trxValue)) {
+        trxError.textContent = "❌ This TrxID already exists.";
+        trxInput.focus();
+        return;
+      } else {
+        trxError.textContent = "";
+      }
+
+      const params = new URLSearchParams({
+        action: "submit_payment",
+        MemberID: currentUser.memberId,
+        Name: currentUser.fullName,
+        Month: formData.get("Month"),
+        TrxID: formData.get("TrxID"),
+        Amount: formData.get("Amount"),
+        PaymentDate: formData.get("PaymentDate"),
+        Status: "Pending"
+      });
+
+      await fetch(SCRIPT_URL, { method: "POST", body: params });
+      form.reset();
+      loadPayments();
+    });
 
     function logout() {
       localStorage.removeItem("currentUser");
-      window.location.href = "index.html";
+      location.href = "index.html";
     }
   </script>
 </body>
 </html>
-
